Thu Sep 22 23:36:24 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (find_executable0): default path if environment is not
	  set.  [ruby-dev:27281]

Thu Sep 22 17:31:48 2005  Shugo Maeda  <shugo@ruby-lang.org>

	* test/readline/test_readline.rb (TestReadline::replace_stdio):
	  merged the patch of [ruby-dev:25232] instead of [ruby-dev:25223].
	  (merged from ruby_1_8 branch)

Wed Sep 21 23:30:44 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (configuration): generalized nmake dependent code.

Wed Sep 21 14:16:30 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/ripper/depend (SUFFIXES): no longer needed.

	* ext/ripper/depend (c): avoid nmake problem. fixed [ruby-dev:27191]

Wed Sep 21 08:52:25 2005  why the lucky stiff  <why@ruby-lang.org>

	* ext/syck/token.c: correctly compute identation of a block
	  scalar's parent node. [ruby-talk:150620]

Wed Sep 21 08:20:24 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README.EXT, README.EXT.ja: add new features.

Wed Sep 21 07:43:58 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (default_argv, Arguable#options): defaults strings
	  to be parsed to Arguable instance.

Tue Sep 20 22:25:43 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/wait/lib/nonblock.rb: disable on platforms non-blocking flag
	  is not available.  fixed: [ruby-dev:27187]

	* file.c (rb_stat_inspect): protoized function pointer.

Tue Sep 20 18:23:04 2005  Tanaka Akira  <akr@m17n.org>

	* eval.c (thread_mark): mark th->last_status.  [ruby-dev:27179]

Tue Sep 20 17:26:42 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* test/webrick/test_cgi.rb: set ENV["PATH"] to CGIEnvPath on
	  windows. bcc32's runtime is not installed into system directory,
	  so it cannot be found without this setting. [ruby-dev:27166]

Tue Sep 20 17:14:10 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* io.c: PIPE_BUF is not defined in BeOS. use _POSIX_PIPE_BUF instead.
	  [ruby-dev:27185]
