@@ -4,7 +4,7 @@ require 'mkmf'
 require 'rbconfig'
 
 def main
-  unless have_command('bison')
+  unless find_executable('bison')
     unless File.exist?('ripper.c') or File.exist?("#{$srcdir}/ripper.c")
       $stderr.puts 'missing bison; abort'
       exit 1
@@ -15,14 +15,6 @@ def main
   $CPPFLAGS += ' -DRIPPER'
   $CPPFLAGS += ' -DRIPPER_DEBUG' if $debug
   create_makefile 'ripper'
-end
-
-def have_command(cmd)
-  checking_for(cmd) {
-    ENV['PATH'].split(File::PATH_SEPARATOR).any? {|path|
-      File.executable?("#{path}/#{cmd}#{Config::CONFIG['EXEEXT']}")
-    }
-  }
 end
 
 main
