@@ -1,7 +1,9 @@
-Thu Sep 22 23:36:24 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Thu Sep 22 23:40:19 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/mkmf.rb (find_executable0): default path if environment is not
 	  set.  [ruby-dev:27281]
+
+	* ext/ripper/extconf.rb (have_command): replaced with find_executable.
 
 Thu Sep 22 17:31:48 2005  Shugo Maeda  <shugo@ruby-lang.org>
 
